# capialOps-backend-API

./: .env.example  .gitignore  .replit  BACKEND_REQUIREMENTS.md  PLAN.md  README.md  alembic.ini  main.py  package-lock.json  package.json  pyproject.toml  railway.toml  replit.md  requirements.txt
app/: __init__.py  __init__.py.bak  auth_utils.py  models.py  notifications.py
app/routes/: api.py  auth.py  capital.py  compat.py  dashboard.py  dev.py  entitlement.py  execution.py  google_auth.py  reports.py  uploads.py  vendor.py
app/static/css/: style.css
app/templates/: base.html
app/templates/auth/: login.html
app/templates/capital/: add_investor.html  deal_detail.html  deals.html  index.html  investors.html  matching.html
app/templates/dashboard/: index.html
app/templates/execution/: governance.html  index.html  project_detail.html
app/utils/: encryption.py
client/: index.html  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/components/: ProtectedRoute.tsx
client/src/pages/: DashboardPage.tsx  LoginPage.tsx
migrations/: env.py
migrations/versions/: add_encrypted_investor_fields.py  add_entitlements_and_notifications.py  add_financial_reports.py  hash_mfa_codes_and_reset_tokens.py
tests/: test_encryption.py
